# Search_Engine

./: CMakeLists.txt  README.md  answers.json  config.json  converterjson.cpp  converterjson.h  invertedIndex.cpp  invertedIndex.h  searchServer.cpp  search_engine_test.cc
resources/: CMakeLists.txt
